Prevent page breaks in quiz questions

--- a/Extensions/QuizExtension/pebl-quiz-widget.css
+++ b/Extensions/QuizExtension/pebl-quiz-widget.css
@@ -6,7 +6,9 @@
     font-weight: bold;
     padding: .5em 0;
     border-bottom: 1px solid #aaa;
-    display: inline-block;
+    display: list-item;
+    break-inside: avoid-column;
+    -webkit-column-break-inside: avoid;
     vertical-align: top;
     width: 100%;
 }
